chore: Cosmetic changes

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,11 +2,13 @@
   "extends": "airbnb-base",
   "env": {
     "es6": true,
-    "mocha": true,
     "node": true
   },
+  "parserOptions": {
+    "sourceType": "script"
+  },
   "rules": {
-    "arrow-body-style": 0,
+    "arrow-parens": [2, "as-needed", { "requireForBlockBody": true }],
     "comma-dangle": [2, {
       "arrays": "always-multiline",
       "objects": "always-multiline",
@@ -14,11 +16,7 @@
       "exports": "always-multiline",
       "functions": "never"
     }],
-    "consistent-return": 0,
-    "key-spacing": [2, { "beforeColon": false, "afterColon": true, "mode": "minimum" }],
-    "import/no-extraneous-dependencies":  0,
     "max-len": [2, { "code": 80 }],
-    "no-confusing-arrow": 0,
     "no-multi-spaces": [2, {
       "exceptions": {
         "AssignmentExpression": true,
@@ -27,23 +25,10 @@
         "VariableDeclarator": true
       }
     }],
-    "no-param-reassign": 0,
     "no-unused-expressions": 0,
     "no-use-before-define": 0,
     "prefer-destructuring": 0,
-    "prefer-promise-reject-errors": 0,
     "prefer-template": 0,
-    "semi": [2, "always", { "omitLastInOneLineBlock": true }],
-    "spaced-comment": [2, "always", {
-      "line": {
-        "markers": ["*package", "!", ",", "noinspection", "region", "endregion"]
-      },
-      "block": {
-        "balanced": true,
-        "markers": ["*package", "!", ","],
-        "exceptions": ["*"]
-      }
-    }],
-    "strict": 0
+    "strict": [2, "global"]
   }
 }
